Advanced_Feature/3.5_TLSRoute_Terminate/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - name: web-tls-cert
            kind: Secret

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-terminate-route
  namespace: web
spec:
  parentRefs:
    - name: tls-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
